--- a/SHDI Introduction.html
+++ b/SHDI Introduction.html
@@ -17,40 +17,9 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>introduction</title>
-<!--     <style type="text/css">
-	ul{/*设置导航栏的框框*/
-					 	margin: auto;
-						 width: 1200px;
-						 height: 10px;
-						padding: 0px 0px;
-						}
-					  li{ 
-						list-style-type: none;
-						float: left;
-						overflow-x: hidden;
-					 } 
-					a{
-						display: block;
-						width: 124px;
-						height: 50px;
-						font-family: Microsoft Yahei;
-						line-height: 50px;
-						background-color: skyblue;
-						margin: 0px 0px;
-						color: skyblue;
-						text-align: center;
-						text-decoration: none;
-						font-size: 15px;
-					}
-					a:hover{
-						background-color: skyblue;
-					}
-	</style> -->
-	<style type="text/css">
+    <style type="text/css">
 	.navbar-collapse li ul{
-/* 			background:white; 设置二级菜单背景色 */
-			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
-			display:none; /*不再设置为块状显示效果*/
+			display:none;
 			height:auto;
 			width: auto;
 			position:absolute;
@@ -59,18 +28,18 @@
 			margin:0px;
 			list-style-type: none;
 		}
-		.navbar-collapse li:hover ul{
-			display:block;	/*鼠标移动到上面的时候为块状显示。*/
+	.navbar-collapse li:hover ul{
+			display:block;
 		}
         #footer {
-	    background-color:skyblue;
-	    color:white;
-	    clear:both;
-	    text-align:center;
-	    padding:5px; 
-		border-style: groove;
-		border-color: aqua;
-		border-radius: 20px;
+	                background-color:skyblue;
+	                color:white;
+	                clear:both;
+	                text-align:center;
+	                padding:5px; 
+		        border-style: groove;
+		        border-color: aqua;
+		        border-radius: 20px;
 	}
 	</style>
 
@@ -93,17 +62,16 @@
                             <ul class="nav navbar-nav navbar-center">
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
-                                <li class="submenu">
-				<a href=""> Conference</a>
-				  <ul class="Conference"><i><em></em></i>
-				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
-					 <li ><a href="SMPC Introduction.html">SMPC</a><//li>
-					<li ><a href="QPQC Introduction.html">QPQC</a></li>
-					<li ><a href="CSAC Introduction.html">CSAC</a></li>
-					<li ><a href="CC Introduction.html">CC</a></li>
-				</ul>
-			</li>
-
+                                    <li class="submenu">
+				    <a href=""> Conference</a>
+				         <ul class="Conference"><i><em></em></i>
+				             <li ><a href="SHDI Introduction.html">SHDI</a></li>
+					     <li ><a href="SMPC Introduction.html">SMPC</a><//li>
+					     <li ><a href="QPQC Introduction.html">QPQC</a></li>
+					     <li ><a href="CSAC Introduction.html">CSAC</a></li>
+					     <li ><a href="CC Introduction.html">CC</a></li>
+				         </ul>
+			            </li>
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
@@ -125,7 +93,7 @@
 		    <p style="text-indent:2em ">With rapid development of cyberspace security, artificial intelligence and cloud computing, researchers in academia and industry have constructed a large number of schemes, and designed many algorithms. In the meanwhile, the needs of industry and users are also growing urgently. Therefore, it is necessary to solve the software and hardware implementations of designed schemes and algorithms. The gradual maturity of software design theory and the rapid development and productization of hardware design and implementation provide a good foundation and opportunity for solving the above problems.<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; SHDI symposium would like to invit well-known researchers all over the world to present their best works about design and implementation of software and hardware on Cybersecurity schemes and algotihms. Everyone, who does the best works on above fields, will be invited to attend SHDI symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
-			    <div id="footer">
+		   <div id="footer">
                     &nbsp; &nbsp; &nbsp; &nbsp; <a href="SHDI-2019.html">SHDI Symposium-2019</a>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp; <a href="SHDI-2020.html">SHDI Symposium-2020</a>
