--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -17,40 +17,9 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>introduction</title>
-<!--     <style type="text/css">
-	ul{/*设置导航栏的框框*/
-					 	margin: auto;
-						 width: 1200px;
-						 height: 10px;
-						padding: 0px 0px;
-						}
-					  li{ 
-						list-style-type: none;
-						float: left;
-						overflow-x: hidden;
-					 } 
-					a{
-						display: block;
-						width: 124px;
-						height: 50px;
-						font-family: Microsoft Yahei;
-						line-height: 50px;
-						background-color: skyblue;
-						margin: 0px 0px;
-						color: skyblue;
-						text-align: center;
-						text-decoration: none;
-						font-size: 15px;
-					}
-					a:hover{
-						background-color: skyblue;
-					}
-	</style> -->
 	<style type="text/css">
 	.navbar-collapse li ul{
-/* 			background:white; 设置二级菜单背景色 */
-			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
-			display:none; /*不再设置为块状显示效果*/
+			display:none;
 			height:auto;
 			width: auto;
 			position:absolute;
@@ -59,18 +28,18 @@
 			margin:0px;
 			list-style-type: none;
 		}
-		.navbar-collapse li:hover ul{
-			display:block;	/*鼠标移动到上面的时候为块状显示。*/
+	.navbar-collapse li:hover ul{
+			display:block;
 		}
-		#footer {
-	    background-color:skyblue;
-	    color:white;
-	    clear:both;
-	    text-align:center;
-	    padding:5px; 
-		border-style: groove;
-		border-color: aqua;
-		border-radius: 20px;
+	#footer {
+	               background-color:skyblue;
+	               color:white;
+	               clear:both;
+	               text-align:center;
+	               padding:5px; 
+		       border-style: groove;
+		       border-color: aqua;
+		       border-radius: 20px;
 	}
 	</style>
 
@@ -102,7 +71,6 @@
 					<li ><a href="CC Introduction.html">CC</a></li>
 				</ul>
 			</li>
-
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
