--- a/SMPC-2019.html
+++ b/SMPC-2019.html
@@ -19,9 +19,7 @@
     <title>introduction</title>
 	<style type="text/css">
 	.navbar-collapse li ul{
-/* 			background:white; 设置二级菜单背景色 */
-			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
-			display:none; /*不再设置为块状显示效果*/
+			display:none;
 			height:auto;
 			width: auto;
 			position:absolute;
@@ -30,10 +28,9 @@
 			margin:0px;
 			list-style-type: none;
 		}
-		.navbar-collapse li:hover ul{
-			display:block;	/*鼠标移动到上面的时候为块状显示。*/
+	.navbar-collapse li:hover ul{
+			display:block;
 		}
-
 	</style>
 </head>
 <body>
@@ -64,7 +61,6 @@
 					<li ><a href="CC Introduction.html">CC</a></li>
 				</ul>
 			</li>
-
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
