--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-	<style type="text/css">
+   <style type="text/css">
 	.navbar-collapse li ul{
-/* 			background:white; 设置二级菜单背景色 */
-			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
-			display:none; /*不再设置为块状显示效果*/
+			display:none;
 			height:auto;
 			width: auto;
 			position:absolute;
@@ -32,8 +30,8 @@
 			margin:0px;
 			list-style-type: none;
 		}
-		.navbar-collapse li:hover ul{
-			display:block;	/*鼠标移动到上面的时候为块状显示。*/
+	.navbar-collapse li:hover ul{
+			display:block;
 		}
 	#section {
 		background-color:white;
@@ -44,11 +42,11 @@
 		border-radius: 40px;
 	}
 	#footer {
-	    background-color:skyblue;
-	    color:white;
-	    clear:both;
-	    text-align:center;
-	    padding:5px; 
+	        background-color:skyblue;
+	        color:white;
+	        clear:both;
+	        text-align:center;
+	        padding:5px; 
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
@@ -118,26 +116,6 @@
                     <p style="text-indent:2em ">Since the establishment of DFSC, we have initiated and organized a series of conferences in information science including: <a href="SHDI Introduction.html">SHDI Symposium,</a> <a href="SMPC Introduction.html">SMPC Symposium,</a> <a href="QPQC Introduction.html">QPQC Symposium,</a> <a href="CSAC Introduction.html">CSAC Symposium</a> and <a href="CC Introduction.html">CC Symposium</a>. DFSC has been built a series of co-operations with Universities/Colleges/Schools and Enterprises.<br/>
                     <p style="text-indent:2em ">We also provide <a href="courses.html">online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Difference of Privacy, Secure Multi-party Computation, AI and IoT etc. <br/>
 			</div>
-			<!--                     <tr>
-						<td>
-							<a href="SHDI Introduction.html">SHDI Symposium</a> 
-						</td>
-						<td>
-							<a href="SMPC Introduction.html">SMPC Symposium</a>
-						</td>
-						<td>
-							<a href="QPQC Introduction.html">QPQC Symposium</a>
-						</td>
-						<td>
-							<a href="CSAC Introduction.html">CSAC Symposium</a> 
-						</td>
-						<td>
-							<a href="CC Introduction.html">CC Symposium</a>
-						</td>
-						<td>
-							<a href="courses.html">online training courses</a>
-						</td>
-					</tr> -->
                     <hr>
                     <div id="footer">
                     <p style="text-indent:2em ">Conferences Sponsors: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
