--- a/product.html
+++ b/product.html
@@ -19,40 +19,9 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-<!--     <style type="text/css">
-	ul{/*设置导航栏的框框*/
-					 	margin: auto;
-						 width: 1200px;
-						 height: 10px;
-						padding: 0px 0px;
-						}
-					  li{ 
-						list-style-type: none;
-						float: left;
-						overflow-x: hidden;
-					 } 
-					a{
-						display: block;
-						width: 124px;
-						height: 50px;
-						font-family: Microsoft Yahei;
-						line-height: 50px;
-						background-color: skyblue;
-						margin: 0px 0px;
-						color: skyblue;
-						text-align: center;
-						text-decoration: none;
-						font-size: 15px;
-					}
-					a:hover{
-						background-color: skyblue;
-					}
-	</style> -->
-	<style type="text/css">
+    <style type="text/css">
 	.navbar-collapse li ul{
-/* 			background:white; 设置二级菜单背景色 */
-			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
-			display:none; /*不再设置为块状显示效果*/
+			display:none;
 			height:auto;
 			width: auto;
 			position:absolute;
@@ -61,8 +30,8 @@
 			margin:0px;
 			list-style-type: none;
 		}
-		.navbar-collapse li:hover ul{
-			display:block;	/*鼠标移动到上面的时候为块状显示。*/
+	.navbar-collapse li:hover ul{
+			display:block;
 		}
 	</style>
 </head>
@@ -137,8 +106,6 @@ date.setTime(date.getTime() - skew)
 					<li ><a href="CC Introduction.html">CC</a></li>
 				</ul>
 			</li>
-
-
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
