--- a/CC Introduction.html
+++ b/CC Introduction.html
@@ -19,9 +19,7 @@
     <title>introduction</title>
 	<style type="text/css">
 	.navbar-collapse li ul{
-/* 			background:white; 设置二级菜单背景色 */
-			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
-			display:none; /*不再设置为块状显示效果*/
+			display:none;
 			height:auto;
 			width: auto;
 			position:absolute;
@@ -30,15 +28,15 @@
 			margin:0px;
 			list-style-type: none;
 		}
-		.navbar-collapse li:hover ul{
-			display:block;	/*鼠标移动到上面的时候为块状显示。*/
+	.navbar-collapse li:hover ul{
+			display:block;
 		}
-		#footer {
-	    background-color:skyblue;
-	    color:white;
-	    clear:both;
-	    text-align:center;
-	    padding:5px; 
+	#footer {
+	        background-color:skyblue;
+	        color:white;
+	        clear:both;
+	        text-align:center;
+	        padding:5px; 
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
@@ -74,7 +72,6 @@
 					<li ><a href="CC Introduction.html">CC</a></li>
 				</ul>
 			</li>
-
                                  <li class="submenu">
                                     <a href="courses.html">Courses</a>
                                 </li>
@@ -96,12 +93,14 @@
                     &nbsp; &nbsp; &nbsp; &nbsp; CC symposium would like to invit well-known researchers all over the world to present their best works about state-of-art, research trends and applications on Code and Cryptography. Everyone, who does the best works on above fields, will be invited to attend CC symposium, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
-			<div id="footer">
+		    </p>
+		  <div id="footer">
+	          <p>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2018.html">CC Symposium-2018</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2019.html">CC Symposium-2019</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="CC-2020.html">CC Symposium-2020</a> <br/>
-		    </div>
                 </p>
+		    </div>
             </div> 
             </div>
            
