--- a/CSAC Introduction.html
+++ b/CSAC Introduction.html
@@ -19,9 +19,7 @@
     <title>introduction</title>
 	<style type="text/css">
 	.navbar-collapse li ul{
-/* 			background:white; 设置二级菜单背景色 */
-			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
-			display:none; /*不再设置为块状显示效果*/
+			display:none;
 			height:auto;
 			width: auto;
 			position:absolute;
@@ -30,18 +28,18 @@
 			margin:0px;
 			list-style-type: none;
 		}
-		.navbar-collapse li:hover ul{
-			display:block;	/*鼠标移动到上面的时候为块状显示。*/
+	.navbar-collapse li:hover ul{
+			display:block;
 		}
-		#footer {
-	    background-color:skyblue;
-	    color:white;
-	    clear:both;
-	    text-align:center;
-	    padding:5px; 
-		border-style: groove;
-		border-color: aqua;
-		border-radius: 20px;
+	#footer {
+	         background-color:skyblue;
+	         color:white;
+	         clear:both;
+	         text-align:center;
+	         padding:5px; 
+		 border-style: groove;
+		 border-color: aqua;
+		 border-radius: 20px;
 	}
 	</style>
 </head>
@@ -95,12 +93,14 @@
                     &nbsp; &nbsp; &nbsp; &nbsp; CSAC symposium would like to invit well-known researchers all over the world to present their best works about Cybersecurity and Cryptography. Everyone, who does the best works on above fields, will be invited to attend CSAC Conference, and present their works. We would like to provid tranvel funding for the invited speakers.
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
-			<div id="footer">
+		 </p>
+		<div id="footer">
+		  <p>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="CSAC-2020.html">CSAC Conference-2020</a> <br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;<a href="CSAC-2019.html">CSAC Conference-2019</a> <br/>
                      &nbsp; &nbsp; &nbsp; &nbsp;<a href="CSAC-2018.html">CSAC Conference-2018</a> <br/>
+		    </p>
 		    </div>
-                </p>
             </div> 
             </div>
            
