--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -20,11 +20,9 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>introduction</title>
-	<style type="text/css">
+    <style type="text/css">
 	.navbar-collapse li ul{
-/* 			background:white; 设置二级菜单背景色 */
-			/* border-left:2px solid #007962; */ /*设置菜单左边框样式和颜色.*/
-			display:none; /*不再设置为块状显示效果*/
+			display:none;
 			height:auto;
 			width: auto;
 			position:absolute;
@@ -33,8 +31,8 @@
 			margin:0px;
 			list-style-type: none;
 		}
-		.navbar-collapse li:hover ul{
-			display:block;	/*鼠标移动到上面的时候为块状显示。*/
+	.navbar-collapse li:hover ul{
+			display:block;
 		}
 	</style>
 </head>
