--- a/project.html
+++ b/project.html
@@ -155,16 +155,16 @@ date.setTime(date.getTime() - skew)
             <div class="introdution">
                 <div id="theme">
                     <p style="text-align: center;font-size: 20px">Projects</p>
-<!--                      <hr color="bisque"> -->
+                     <hr color="bisque">
 		 <div id="section1">
                     <p style="text-indent:2em ">Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
 		</div>
-			    <!--                     <hr color="bisque"> -->
+	          <hr color="bisque">
 		    <div id="section2"
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation<br/>
                      <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation<br/>
 		    </div>
-<!--                      <hr color="bisque"> -->
+                 <hr color="bisque">
 	        <div id="footer">
                 <p style="text-indent:2em ">Projects Co-operation: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
 		</div> 
