--- a/product.html
+++ b/product.html
@@ -155,16 +155,16 @@ date.setTime(date.getTime() - skew)
             <div class="introdution">
               <div id="theme">
                     <p style="text-align: center;font-size: 20px">Products</p>
-<!--               <hr size='1' color="bisque"> -->
+              <hr size='1'>
 		<div id="section1">
                     <p style="text-indent:2em ">Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
 		</div>
-<!-- 		    <hr size='1' color="bisque"> -->
+		    <hr size='1'>
                 <div id="section2">
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption Implementation Demo.<br/>                
                      <p style="text-indent:2em ">*Lattice-based Cryptography Implementation Demo<br/>
 		</div>  
-<!-- 	            <hr size='1' color="bisque"> -->
+	            <hr size='1'>
 		<div id="footer">
                 <p style="text-indent:2em ">Products Co-operation: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
 		</div>                                
