--- a/project.html
+++ b/project.html
@@ -33,7 +33,7 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
-	#sectin1 {
+	#section1 {
 	          background-color:skyblue;
 	          color:white;
 	          clear:both;
