--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
 			display:block;
 		}
 	#section {
-		background-color:white;
+		background-color:skyblue;
 		text-align: center;
 		padding: 5px;
 		height: auto;
 		border-style: groove;
 		border-radius: 40px;
+		color:white;
 	}
 	#footer {
 	        background-color:skyblue;
