--- a/courses.html
+++ b/courses.html
@@ -53,7 +53,17 @@
 		border-color: aqua;
 		border-radius: 20px;
 	}
-	#footer {
+	#footer1 {
+	        background-color:skyblue;
+	        color:white;
+	        clear:both;
+	        text-align:center;
+	        padding:5px; 
+		border-style: groove;
+		border-color: aqua;
+		border-radius: 20px;
+	}
+	#footer2 {
 	        background-color:skyblue;
 	        color:white;
 	        clear:both;
@@ -128,7 +138,7 @@
                     <p style="text-indent:2em ">*AI and Security (人工智能与安全课程)<a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/AIS Training Course Registration Form-培训课程注册登记表.doc" download="AIS Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
 		    </div>
 			    <hr>
-		    <div id="footer">
+		    <div id="footer1">
                     <p style="text-align: center;font-size: 20px">The Second Course Session</p> 
                     <p style="text-indent:2em ">*Differential Privacy (差分隐私及其应用课程) <a href="DP syllabus.html">Syllabus of Differential Privacy and Applications(课程安排)</a> <a href="image/DP Training Course Registration Form-培训课程注册登记表.doc" download="DP Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/> 
                     <p style="text-indent:2em ">*Secure Computation (安全计算课程) <a href="SC syllabus.html">Syllabus of Secure Computation (课程安排)</a> <a href="image/SC Training Course Registration Form-培训课程注册登记表.doc" download="SC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
@@ -137,7 +147,9 @@
                     <!-- <p style="text-indent:2em ">*Trusted Computing<br/>  -->
 		    </div>
 			    <hr>
-                <p style="text-indent:2em ">Online Training Courses: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>                                                 
+		    <div id="footer2">
+                <p style="text-indent:2em ">Online Training Courses: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/> 
+		    </div>
         </div>
 <script type="text/javascript">
 function googleTranslateElementInit() {
