--- a/CSAC Introduction.html
+++ b/CSAC Introduction.html
@@ -103,7 +103,11 @@
 		    </div>
             </div> 
             </div>
-           
+        <script type="text/javascript">
+         function googleTranslateElementInit() {
+         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>   
     
 </body>
 </html>
