--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -354,5 +354,10 @@
     addHandler(down2,"mouseout",()=>down2.style.border="");
     window.sr = ScrollReveal().reveal('#introdution,#speaker,#contents,#button');
 </script>
+<script type="text/javascript">
+         function googleTranslateElementInit() {
+         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>
 </body>
 </html>
