--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -100,5 +100,10 @@
                 </p>
             </div> 
             </div>
+    <script type="text/javascript">
+         function googleTranslateElementInit() {
+         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>
 </body>
 </html>
