--- a/SMPC-2020.html
+++ b/SMPC-2020.html
@@ -89,7 +89,10 @@
             <div class="main2">
             <div id="main2">
                 <div id="contents">
-                   
-                    
+      <script type="text/javascript">
+         function googleTranslateElementInit() {
+         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>
 </body>
 </html>
