--- a/index.html
+++ b/index.html
@@ -122,7 +122,10 @@
                     <p style="text-indent:2em ">Conferences Sponsors: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
                     <p style="text-indent:2em ">Research Cooperation: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
 			</div>
-              
-</body>
-                 
+     <script type="text/javascript">
+         function googleTranslateElementInit() {
+         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>        
+</body>               
 </html>
