--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		border-style: groove;
 		border-radius: 40px;
 		color:white;
+		margin-top: 15px;
 	}
 	#footer {
 	        background-color:skyblue;
@@ -51,6 +52,7 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
+		margin-top: 15px;
 	}
 	.induc{
 		color:  skyblue;
