--- a/courses.html
+++ b/courses.html
@@ -42,6 +42,7 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
+		margin-top: 30px;
 	}
 	#section2 {
 	        background-color:skyblue;
@@ -52,6 +53,7 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
+		margin-top: 30px;
 	}
 	#footer1 {
 	        background-color:skyblue;
@@ -62,6 +64,7 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
+		margin-top: 30px;
 	}
 	#footer2 {
 	        background-color:skyblue;
@@ -72,6 +75,7 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
+		margin-top: 30px;
 	}
 	</style>
 </head>
@@ -125,11 +129,11 @@
             <div class="introdution">
                 <div id="theme">
                     <p style="text-align: center;font-size: 20px">Online Training Courses</p>
-                     <hr>
+<!--                      <hr> -->
 		     <div id="section1">
                     <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
 		    </div>
-			<hr>
+<!-- 			<hr> -->
 		    <div id="section2">
                     <p style="text-align: center;font-size: 20px">The First Course Session</p>
                     <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation (全同态加密及其应用课程)<a href="FHE syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/FHE Training Course Registration Form-培训课程注册登记表.doc" download="FHE Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
@@ -137,7 +141,7 @@
                     <p style="text-indent:2em ">*Secure Multi-party Computation and Implementation (安全多方计算及其应用课程)<a href="SMPC syllabus.html">SMPC Syllabus(课程安排)</a> <a href="image/SMPC Training Course Registration Form-培训课程注册登记表.doc" download="SMPC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
                     <p style="text-indent:2em ">*AI and Security (人工智能与安全课程)<a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/AIS Training Course Registration Form-培训课程注册登记表.doc" download="AIS Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
 		    </div>
-			    <hr>
+<!-- 			    <hr> -->
 		    <div id="footer1">
                     <p style="text-align: center;font-size: 20px">The Second Course Session</p> 
                     <p style="text-indent:2em ">*Differential Privacy (差分隐私及其应用课程) <a href="DP syllabus.html">Syllabus of Differential Privacy and Applications(课程安排)</a> <a href="image/DP Training Course Registration Form-培训课程注册登记表.doc" download="DP Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/> 
@@ -146,7 +150,7 @@
                     <p style="text-indent:2em ">*Advanced Topics in Cryptography (密码前沿课程)<a href="ATC syllabus.html">Syllabus of Advanced Topics in Cryptography (课程安排)</a> <a href="image/ATC Training Course Registration Form-培训课程注册登记表.doc" download="ATC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a> <br/>
                     <!-- <p style="text-indent:2em ">*Trusted Computing<br/>  -->
 		    </div>
-			    <hr>
+<!-- 			    <hr> -->
 		    <div id="footer2">
                 <p style="text-indent:2em ">Online Training Courses: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/> 
 		    </div>
