--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
 			z-index:200;
 			margin:0px;
 			list-style-type: none;
+		        overflow: hidden;
 		}
 	.navbar-collapse li:hover ul{
 			display:block;
+		        overflow: visible;
 		}
 	#section {
 		background-color:skyblue;
