--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
    <style type="text/css">
 	.navbar-collapse li ul{
 			display:none;
-			height:auto;
-			width: auto;
+			height:100px;
+			width: 100px;
 			position:absolute;
-			width:100px;
 			z-index:200;
 			margin:0px;
 			list-style-type: none;
