--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
    <style type="text/css">
 	.navbar-collapse li ul{
 			display:none;
-			height:100px;
-			width: 100px;
+			height:auto;
+			width: auto;
 			position:absolute;
 			z-index:200;
 			margin:50px;
