--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                              <li class="submenu">
 				<a href=""> Conference</a>
 				  <ul class="Conference"><i><em></em></i>
-				         <li class="submenu"><a href="SHDI Introduction.html">SHDI</a></li>
+				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
 					<li ><a href="QPQC Introduction.html">QPQC</a></li>
 					<li ><a href="CSAC Introduction.html">CSAC</a></li>
