--- a/SMPC Introduction.html
+++ b/SMPC Introduction.html
@@ -62,8 +62,8 @@
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
 				   <li class="submenu">
-				<a href=""> Conference</a>
-				  <ul class="Conference"><i><em></em></i>
+				<a href=""> Conferences</a>
+				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
 					<li ><a href="QPQC Introduction.html">QPQC</a></li>
