--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 		border-style: groove;
 		border-radius: 40px;
 		color:white;
-		margin-top: 30px;
+		margin-top: 15px;
+		text-align: justify;
 	}
 	#footer {
 	        background-color:skyblue;
@@ -52,7 +53,8 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
-		margin-top: 50px;
+		margin-top: 15px;
+		margin-bottom: 60px;
 	}
 	.induc{
 		color:  skyblue;
