--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		border-style: groove;
 		border-radius: 40px;
 		color:white;
-		margin-top: 15px;
+/* 		margin-top: 15px; */
 		text-align: justify;
 	}
 	#footer {
@@ -53,8 +53,7 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
-		margin-top: 15px;
-		margin-bottom: 60px;
+		margin-top: 5px;
 	}
 	.induc{
 		color:  skyblue;
