--- a/courses.html
+++ b/courses.html
@@ -42,7 +42,8 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
-		margin-top: 30px;
+		text-align: justify;
+/* 		margin-top: 30px; */
 	}
 	#section2 {
 	        background-color:skyblue;
@@ -53,7 +54,8 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
-		margin-top: 30px;
+		margin-top: 5px;
+		text-align: justify;
 	}
 	#footer1 {
 	        background-color:skyblue;
@@ -64,7 +66,8 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
-		margin-top: 30px;
+		margin-top: 5px;
+		text-align: justify;
 	}
 	#footer2 {
 	        background-color:skyblue;
@@ -75,7 +78,7 @@
 		border-style: groove;
 		border-color: aqua;
 		border-radius: 20px;
-		margin-top: 30px;
+		margin-top: 5px;
 	}
 	</style>
 </head>
