--- a/product.html
+++ b/product.html
@@ -43,6 +43,7 @@
 		  border-color: aqua;
 		  border-radius: 20px;
 		  margin-top: 30px;
+		  text-align: justify;
 	}
 	#section2 {
 	          background-color:skyblue;
@@ -54,6 +55,7 @@
 		  border-color: aqua;
 		  border-radius: 20px;
 		  margin-top: 30px;
+		  text-align: justify;
 	}
         #footer {
 	          background-color:skyblue;
@@ -65,6 +67,7 @@
 		  border-color: aqua;
 		  border-radius: 20px;
 		  margin-top: 30px;
+		 text-align: justify;
 	}
 	</style>
 </head>
