--- a/project.html
+++ b/project.html
@@ -68,6 +68,8 @@
 		  border-radius: 20px;
 		  margin-top: 30px;
 		  text-align: justify;
+		  text-align-last: justify;
+		  text-justify: distribute-all-lines;
 	}
 	</style>
 </head>
