--- a/project.html
+++ b/project.html
@@ -55,7 +55,7 @@
 		  border-color: aqua;
 		  border-radius: 20px;
 		  margin-top: 30px;
-		  text-align: justify;
+		  text-align: auto;
 	}
 	#footer {
 	          background-color:skyblue;
@@ -67,9 +67,7 @@
 		  border-color: aqua;
 		  border-radius: 20px;
 		  margin-top: 30px;
-		  text-align: justify;
-		  text-align-last: justify;
-		  text-justify: distribute-all-lines;
+		  text-align: auto;
 	}
 	</style>
 </head>
