--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 		color:white;
 /* 		margin-top: 15px; */
 		text-align: justify;
+		align-items: center;
+		justify-content: center;
 	}
 	#footer {
 	        background-color:skyblue;
