--- a/project.html
+++ b/project.html
@@ -55,7 +55,9 @@
 		  border-color: aqua;
 		  border-radius: 20px;
 		  margin-top: 30px;
-		  text-align: auto;
+		  text-align: justify;
+		  align-items: center;
+		 justify-content: center;
 	}
 	#footer {
 	          background-color:skyblue;
