--- a/project.html
+++ b/project.html
@@ -67,7 +67,7 @@
 		  border-color: aqua;
 		  border-radius: 20px;
 		  margin-top: 30px;
-		  text-align: auto;
+		  text-align: justify;
 	}
 	</style>
 </head>
