--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		text-align: justify;
 		align-items: center;
 		justify-content: center;
+		line-height: 100%;
 	}
 	#footer {
 	        background-color:skyblue;
