--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
 		}
 	#section {
 		background-color:skyblue;
-		text-align: center;
+/* 		text-align: center; */
 		padding: 5px;
 		height: auto;
 		border-style: groove;
 		border-radius: 40px;
 		color:white;
+		text-align:justify;
 	}
 	#footer {
 	        background-color:skyblue;
