--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <!--   <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a> -->
+                              <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a>
                         </div>
                         <div id="navbar-collapse" class="collapse navbar-collapse">
                             <ul class="nav navbar-nav navbar-center">
@@ -110,7 +110,7 @@
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" ></a> <br/>
+<!-- 		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" ></a> <br/> -->
                     <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                     <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>
