--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		border-radius: 40px;
 		color:white;
 		text-align:justify;
+		line-height: 22px;
 	}
 	#footer {
 	        background-color:skyblue;
@@ -54,6 +55,7 @@
 		border-radius: 20px;
 		margin-top: 5px;
 		margin-bottom:5px;
+		line-height: 22px;
 	}
 	.induc{
 		color:  skyblue;
@@ -67,7 +69,7 @@
 <body>
     <div >
         <div id="head">
-            <header style="min-height: 76px;">
+            <header style="min-height: 60px;">
                 <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
                     <div class="container">
                         <div class="navbar-header">
