--- a/Conferences Introduction.html
+++ b/Conferences Introduction.html
@@ -84,8 +84,8 @@
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
 									<li class="submenu">
-										<a href=""> conference</a>
-									           <ul class="conference"><i><em></em></i>
+										<a href="Conferences Introduction.html"> conferences</a>
+									           <ul class="Conferences"><i><em></em></i>
 									                    <li ><a href="SHDI Introduction.html">SHDI</a></li>
 									                    <li ><a href="SMPC Introduction.html">SMPC</a></li>
 									                    <li ><a href="QPQC Introduction.html">QPQC</a></li>
