--- a/AI syllabus.html
+++ b/AI syllabus.html
@@ -98,7 +98,7 @@ date.setTime(date.getTime() - skew)
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                 <li class="submenu">
-				<a href=""> Conferences</a>
+				<a href="Conferences.html"> Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
