--- a/Conferences .html
+++ b/Conferences .html
@@ -84,7 +84,7 @@
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
 									<li class="submenu">
-										<a href=""> conferences</a>
+										<a href="Conferences.html"> conferences</a>
 									           <ul class="Conferences"><i><em></em></i>
 									                    <li ><a href="SHDI Introduction.html">SHDI</a></li>
 									                    <li ><a href="SMPC Introduction.html">SMPC</a></li>
