--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			display: -ms-flexbox;
 		}
 	 #section {
-		background-color:white;
+		background-color:skybllue;
+		 color:white;
 		padding: 5px;
 		height: auto;
 		border-style: groove;
