--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div id = "introdution">
                         <div class="introdution">
                             <div id="theme">
-            		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" ></a> <br/>
+            		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
                                 <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                                 <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>
