--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			display: -ms-flexbox;
 		}
 	 #section {
-		background-color:skybllue;
+		background-color:skyblue;
 		 color:white;
 		padding: 5px;
 		height: auto;
