--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		}
 	 #section {
 		background-color:skyblue;
-		 color:white;
+		 color:black;
 		padding: 5px;
 		height: auto;
 		border-style: groove;
@@ -47,7 +47,7 @@
 	}
 	#footer {
 	    background-color:skyblue;
-	    color:white;
+	    color:black;
 	    clear:both;
 	    text-align:center;
 	    padding:5px; 
