--- a/Conferences.html
+++ b/Conferences.html
@@ -33,7 +33,7 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
-	#section1 {
+	/* #section1 {
 	        background-color:skyblue;
 	        color:white;
 	        clear:both;
@@ -44,7 +44,7 @@
 		border-radius: 20px;
 		text-align: justify;
 /* 		margin-top: 30px; */
-	}
+	/* }
 	#section2 {
 	        background-color:skyblue;
 	        color:white;
@@ -56,8 +56,8 @@
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
-	}
-	#footer1 {
+	} */
+	/* #footer1 {
 	        background-color:skyblue;
 	        color:white;
 	        clear:both;
@@ -68,8 +68,8 @@
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
-	}
-	#footer2 {
+	} */
+	/* #footer2 {
 	        background-color:skyblue;
 	        color:white;
 	        clear:both;
@@ -79,7 +79,7 @@
 		border-color: aqua;
 		border-radius: 20px;
 		margin-top: 10px;
-	}
+	} */ */
 	</style>
 </head>
     
@@ -134,23 +134,25 @@
                     <p style="text-align: center;font-size: 20px">Conferences</p>
 <!--                      <hr> -->
 		     <div id="section1">
-                    <p style="text-indent:2em ">We also providee of Privacy, AI and IoT etc. <br/> 
+		    <p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/circle-cropped.png"  style="width: 210px; height: 213px; " ></a> <br/>
+                    <p style="text-indent:2em ">SHDI <br/> 
 		    </div>
 <!-- 			<hr> -->
 		    <div id="section2">
-                    <p style="text-align: center;font-size: 20px">The </p>
-                    <p style="text-indent:2em ">*Fully </a><br/>
-                    <p style="text-indent:2em ">*Lattice-based </a><br/>
-                    <p style="text-indent:2em ">*Secure Multi-party Computation </a><br/>
-                    <p style="text-indent:2em ">*AI and Security </a><br/>
+                    <!-- <p style="text-align: center;font-size: 20px">The </p> -->
+                    
+		    <p style="text-indent:2em ">SMPC </a><br/>
+                    <p style="text-indent:2em ">QPQC</a><br/>
+                    <p style="text-indent:2em ">CSAC</a><br/>
+                    <p style="text-indent:2em ">CC</a><br/>
 		    </div>
 <!-- 			    <hr> -->
 		    <div id="footer1">
-                    <p style="text-align: center;font-size: 20px">The Second Course Session</p> 
-                    <p style="text-indent:2em ">*Differential Privacy <br/> 
+                    <!-- <p style="text-align: center;font-size: 20px">The Second Course Session</p> -->
+                    <!-- <p style="text-indent:2em ">*Differential Privacy <br/>
                     <p style="text-indent:2em ">*Secure Computation (安全计算课程)<br/>
                     <p style="text-indent:2em ">*Blockchains and Applications <br/>
-                    <p style="text-indent:2em ">*Advanced Topics <br/>
+                    <p style="text-indent:2em ">*Advanced Topics <br/> -->
                     <!-- <p style="text-indent:2em ">*Trusted Computing<br/>  -->
 		    </div>
 <!-- 			    <hr> -->
