--- a/Conferences.html
+++ b/Conferences.html
@@ -140,9 +140,10 @@
 <!-- 			<hr> -->
 		    <div id="section2">
                     <!-- <p style="text-align: center;font-size: 20px">The </p> -->
-                    
+                    <p style="text-align:center"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"  style="width: 210px; height: 213px; " ></a> <br/>
 		    <p style="text-indent:2em ">SMPC </a><br/>
                     <p style="text-indent:2em ">QPQC</a><br/>
+		    <p style="text-align:center"><img alt="CSAC-2019" src="image/circle-cropped-csac.png"  style="width: 210px; height: 213px; " ></a> <br/>
                     <p style="text-indent:2em ">CSAC</a><br/>
                     <p style="text-indent:2em ">CC</a><br/>
 		    </div>
