--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
 			display: -ms-flexbox;
 		}
 	 #section {
-		background-color:skyblue;
-		 color:black;
-		padding: 5px;
-		height: auto;
-		border-style: groove;
-		border-radius: 40px;
-		margin-top: 15px;
-		text-align: justify; 
-		line-height: 22px;
+		 background-color:skyblue;
+	         color:black;
+	         clear:both;
+	         text-align:center;
+	         padding:5px; 
+	         border-style: groove;
+	         border-color: aqua;
+	         border-radius: 20px;
+	         margin-top: 15px;
+	         margin-bottom: 30px;
 	}
 	#footer {
 	    background-color:skyblue;
@@ -50,11 +51,11 @@
 	    clear:both;
 	    text-align:center;
 	    padding:5px; 
-		border-style: groove;
-		border-color: aqua;
-		border-radius: 20px;
-		margin-top: 15px;
-		margin-bottom: 30px;
+	    border-style: groove;
+	    border-color: aqua;
+	    border-radius: 20px;
+	    margin-top: 15px;
+	    margin-bottom: 30px;
 	}
 	.induc{
 		color:  skyblue;
