--- a/BL syllabus.html
+++ b/BL syllabus.html
@@ -159,6 +159,7 @@ date.setTime(date.getTime() - skew)
             
                      
         </div>
+	<p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
 <script type="text/javascript">
 function googleTranslateElementInit() {
 new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
