--- a/CSAC Introduction.html
+++ b/CSAC Introduction.html
@@ -103,6 +103,7 @@
 		    </div>
             </div> 
             </div>
+	    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
         <script type="text/javascript">
          function googleTranslateElementInit() {
          new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
