--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -283,6 +283,7 @@
                     <br/>
                 </p>-->
         </div>
+	<p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
         <script type="text/javascript">
          function googleTranslateElementInit() {
          new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
