--- a/SMPC-2019.html
+++ b/SMPC-2019.html
@@ -414,6 +414,7 @@
         addHandler(down2,"mouseout",()=>down2.style.border="");
         window.sr = ScrollReveal().reveal('#introdution,#speaker,#contents,#button');
     </script>
+    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
     <script type="text/javascript">
          function googleTranslateElementInit() {
          new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
