--- a/SMPC-2020.html
+++ b/SMPC-2020.html
@@ -89,6 +89,7 @@
             <div class="main2">
             <div id="main2">
                 <div id="contents">
+	    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
       <script type="text/javascript">
          function googleTranslateElementInit() {
          new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
