--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 	         border-radius: 20px;
 	         margin-top: 15px;
 	         margin-bottom: 30px;
+		 text-align: justify;
 	}
 	#footer {
 	    background-color:skyblue;
@@ -56,6 +57,7 @@
 	    border-radius: 20px;
 	    margin-top: 15px;
 	    margin-bottom: 30px;
+	    text-align:justify;
 	}
 	.induc{
 		color:  skyblue;
