--- a/News.html
+++ b/News.html
@@ -103,6 +103,9 @@
                            <ul class="nav navbar-nav navbar-center">
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
+				   <li class="submenu">
+					   <a href="https://github.com/ruizhian/TeamWeb/blob/master/News.html">News</a>
+				   </li>
                                 <li class="submenu">
 				<a href="https://github.com/ruizhian/TeamWeb/blob/master/Conferences.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
