--- a/product.html
+++ b/product.html
@@ -35,36 +35,33 @@
 		}
 	 #section1 {
 	          background-color:skyblue;
-	          color:white;
+	          color:black;
 	          clear:both;
 	          text-align:center;
 	          padding:5px; 
-	   	  border-style: groove;
-		  border-color: aqua;
+	   	  border-style: groove;		  
 		  border-radius: 20px;
 		  margin-top: 30px;
 		  text-align: justify;
 	}
 	#section2 {
 	          background-color:skyblue;
-	          color:white;
+	          color:black;
 	          clear:both;
 	          text-align:center;
 	          padding:5px; 
-	   	  border-style: groove;
-		  border-color: aqua;
+	   	  border-style: groove;		  
 		  border-radius: 20px;
 		  margin-top: 30px;
 		  text-align: justify;
 	}
         #footer {
 	          background-color:skyblue;
-	          color:white;
+	          color:black;
 	          clear:both;
 	          text-align:center;
 	          padding:5px; 
-	   	  border-style: groove;
-		  border-color: aqua;
+	   	  border-style: groove;		 
 		  border-radius: 20px;
 		  margin-top: 30px;
 		 text-align: justify;
@@ -133,7 +130,10 @@ date.setTime(date.getTime() - skew)
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                <li class="submenu">
-				<a href=""> Conferences</a>
+                                    <a href="https://github.com/ruizhian/TeamWeb/blob/master/News.html">News</a>
+                                </li>
+                                <li class="submenu">
+				<a href="https://github.com/ruizhian/TeamWeb/blob/master/Conferences.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
@@ -173,8 +173,7 @@ date.setTime(date.getTime() - skew)
 <!-- 	            <hr size='1'> -->
 		<div id="footer">
                 <p style="text-indent:2em ">Products Co-operation: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/>
-		</div> 
-		<p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
+		</div> 		
         </div>
 <script type="text/javascript">
 function googleTranslateElementInit() {
