--- a/Conference.html
+++ b/Conference.html
@@ -42,6 +42,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		text-align: justify;
+		border-color: skyblue;
 /* 		margin-top: 30px; */
 	}
 	#section2 {
@@ -51,7 +52,7 @@
 	        text-align:center;
 	        padding:5px; 
 		border-style: groove;
-/* 		border-color: aqua; */
+		border-color: skyblue;
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
@@ -63,7 +64,7 @@
 	        text-align:center;
 	        padding:5px; 
 		border-style: groove;
-/* 		border-color: aqua; */
+		border-color: skyblue;
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
@@ -75,7 +76,7 @@
 	        text-align:center;
 	        padding:5px; 
 		border-style: groove;
-/* 		border-color: aqua; */
+		border-color: skyblue;
 		border-radius: 20px;
 		margin-top: 10px;
 	}
