--- a/courses.html
+++ b/courses.html
@@ -42,6 +42,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		text-align: justify;
+		border-color: skyblue;
 /* 		margin-top: 30px; */
 	}
 	#section2 {
@@ -54,6 +55,7 @@
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
+		border-color: skyblue;
 	}
 	#footer1 {
 	        background-color:skyblue;
@@ -64,6 +66,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
+		border-color:skyblue;
 		text-align: justify;
 	}
 	#footer2 {
@@ -74,6 +77,7 @@
 	        padding:5px; 
 		border-style: groove;
 		border-radius: 20px;
+		border-color: skyblue;
 		margin-top: 10px;
 	}
 	</style>
@@ -100,10 +104,10 @@
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                 <li class="submenu">
-                                    <a href="https://github.com/ruizhian/TeamWeb/blob/master/News.html">News</a>
+                                    <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
-				<a href="https://github.com/ruizhian/TeamWeb/blob/master/Conferences.html">Conferences</a>
+				<a href="Conference.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
