--- a/project.html
+++ b/project.html
@@ -43,7 +43,7 @@
 		  border-radius: 20px;
 		  margin-top: 30px;
 		  text-align: justify;
-		  boeder-color: skyblue;
+		  border-color: skyblue;
 	}
 	#section2 {
 	          background-color:skyblue;
@@ -67,7 +67,7 @@
 		  border-radius: 20px;
 		  margin-top: 30px;
 		  text-align: justify;
-		  boeder-color: skyblue;
+		  border-color: skyblue;
 	}
 	</style>
 </head>
