--- a/News.html
+++ b/News.html
@@ -85,7 +85,7 @@
 </head>
     
      
-<body>
+<body background="">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
