--- a/courses.html
+++ b/courses.html
@@ -34,7 +34,7 @@
 			display:block;
 		}
 	#section1 {
-	        background-color:skyblue;
+	        background-color:gainsboro;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -46,7 +46,7 @@
 /* 		margin-top: 30px; */
 	}
 	#section2 {
-	        background-color:skyblue;
+	        background-color:gainsboro;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -58,7 +58,7 @@
 		border-color: skyblue;
 	}
 	#footer1 {
-	        background-color:skyblue;
+	        background-color:gainsboro;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -70,7 +70,7 @@
 		text-align: justify;
 	}
 	#footer2 {
-	        background-color:skyblue;
+	        background-color:powderblue;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -85,7 +85,7 @@
 </head>
     
      
-<body>
+<body background="image/图片3.png">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
