--- a/product.html
+++ b/product.html
@@ -34,7 +34,7 @@
 			display:block;
 		}
 	 #section1 {
-	          background-color:skyblue;
+	          background-color:lightcyan;
 	          color:black;
 	          clear:both;
 	          text-align:center;
@@ -46,7 +46,7 @@
 		 border-color: skyblue;
 	}
 	#section2 {
-	          background-color:skyblue;
+	          background-color:lightcyan;
 	          color:black;
 	          clear:both;
 	          text-align:center;
@@ -58,7 +58,7 @@
 		 border-color: skyblue;
 	}
         #footer {
-	          background-color:skyblue;
+	          background-color:powderblue;
 	          color:black;
 	          clear:both;
 	          text-align:center;
@@ -113,7 +113,7 @@ date.setTime(date.getTime() - skew)
 }
 </script>
 <div id="google_translate_element"></div>    
-<body background="./qian.png">
+<body background="image/图片4.png">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
