--- a/News.html
+++ b/News.html
@@ -34,7 +34,7 @@
 			display:block;
 		}
 	#section1 {
-	        background-color:ghostwhite;
+	        background-color:snow;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -46,7 +46,7 @@
 /* 		margin-top: 30px; */
 	}
 	#section2 {
-	        background-color:ghostwhite;
+	        background-color:snow;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -58,7 +58,7 @@
 		border-color: skyblue;
 	}
 	#footer1 {
-	        background-color:ghostwhite;
+	        background-color:snow;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -70,7 +70,7 @@
 		border-color: skyblue;
 	}
 	#footer2 {
-	        background-color:ghostwhite;
+	        background-color:snow;
 	        color:black;
 	        clear:both;
 	        text-align:center;
