--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
     
      
-<body background="https://img1.baidu.com/it/u=1575050147,3047052804&fm=26&fmt=auto&gp=0.jpg">
+<body background="image/980.jpg">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
