--- a/News.html
+++ b/News.html
@@ -42,7 +42,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		text-align: justify;
-		border-color: skyblue;
+/* 		border-color: skyblue; */
 /* 		margin-top: 30px; */
 	}
 	#section2 {
@@ -55,7 +55,7 @@
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
-		border-color: skyblue;
+/* 		border-color: skyblue; */
 	}
 	#footer1 {
 	        background-color:snow;
@@ -67,7 +67,7 @@
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
-		border-color: skyblue;
+/* 		border-color: skyblue; */
 	}
 	#footer2 {
 	        background-color:snow;
@@ -78,7 +78,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
-		border-color: skyblue;
+/* 		border-color: skyblue; */
 		texte-align: justify;
 	}
 	</style>
