--- a/Conference.html
+++ b/Conference.html
@@ -42,7 +42,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		text-align: justify;
-		border-color: skyblue;
+/* 		border-color: skyblue; */
 /* 		margin-top: 30px; */
 	}
 	#section2 {
@@ -52,7 +52,7 @@
 	        text-align:center;
 	        padding:5px; 
 		border-style: groove;
-		border-color: skyblue;
+/* 		border-color: skyblue; */
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
@@ -63,8 +63,7 @@
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
-		border-style: groove;
-		border-color: skyblue;
+		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
@@ -76,7 +75,7 @@
 	        text-align:center;
 	        padding:5px; 
 		border-style: groove;
-		border-color: skyblue;
+/* 		border-color: skyblue; */
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
