--- a/index.html
+++ b/index.html
@@ -136,8 +136,62 @@
                                 <p style="text-indent:2em ">Research Cooperation: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
             			</div>
             		    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%; margin: 10px 20px;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;margin: 10px;"></a> <br/>
-                            <div class="footer3">
-				    <p><a href="contact.html"></a></p>
+                            <div class="footer3">				  
+			    <form action="">
+			<titel><strong><font size="10" >CONTACT US</font></strong></titel><br>
+			<table border="0">
+				<tr>
+					<td>Firstname:</td>
+					<td>Lastname:</td>
+				</tr>
+				<tr>
+					<td><input type="text" name="Firstname" ></td>
+					<td><input type="text" name="Lastname" ></td>
+				</tr>
+				<tr>
+								<td>Company Email</td>
+							</tr>
+							<tr>
+								<td colspan=2 >
+									<input type="text" name="Company Email" style="width: 418px;height: 20px;">
+								</td>
+							</tr>
+							<tr>
+								<td>Company name</td>
+							</tr>
+							<tr>
+								<td colspan=2>
+									<input type="text" name="Company name" style="width: 418px;height: 20px;">
+								</td>
+							</tr>
+							<tr>
+								<td>Reason for contacting us</td>
+							</tr>
+							<tr>
+								<td colspan=2>
+									<input type="text" name="Reason for contacting us" style="width: 418px;height: 20px;">
+								</td>
+							</tr>
+							<tr>
+								<td>Please select</td>
+							</tr>
+							<tr>
+								<td>
+								<select colspan=2>
+									<option value="Please select" ></option>
+								<select>
+								</td>
+							</tr>
+							<tr>
+								<td>Message</td>
+							</tr>
+							<tr >
+								<td colspan=2>
+									<textarea rows="8" cols="60"></textarea>
+								</td>
+							</tr>
+
+		</form> 
 		    </div>
 		    <script type="text/javascript">
                      function googleTranslateElementInit() {
